tests/compile_fail/handle_scope_lifetime_2.stderr
error[E0499]: cannot borrow `scope1` as mutable more than once at a time
  --> tests/compile_fail/handle_scope_lifetime_2.rs:12:34
   |
9  |   let mut context_scope = v8::ContextScope::new(&mut scope1, context);
   |                                                 ----------- first mutable borrow occurs here
...
12 |   let _local1 = v8::Integer::new(&mut scope1, 123);
   |                                  ^^^^^^^^^^^ second mutable borrow occurs here
13 |   let _local2 = v8::Integer::new(&mut scope, 123);
14 | }
   | - first borrow might be used here, when `context_scope` is dropped and runs the `Drop` code for type `ContextScope`
